--- a/style.css
+++ b/style.css
@@ -87,17 +87,25 @@ a{
     text-align: justify;
 }
 
-.redline {
-    width: 100%;
-    height: 7px;
-    background-color: red;
-    padding: 0;
-    margin: 0;
-
-}
-
-footer {
-    font-family: 'Raleway', sans-serif;
-    font-size: 15px;
+#footer {
+    height:15px;
+    margin-top : 10px;
     text-align: center;
-}
+    font-size: 12px ;
+    font-family: 'Raleway', sans-serif;
+    border-bottom: solid 5px red;
+    }
+
+@media (max-width: 780px) {
+    .homepage {
+        display: grid;
+        grid-template-columns: 550px;
+        grid-template-rows: repeat(4, 470px);
+    }
+    .homepage {
+        gap: 15px;
+    }
+    #footer {
+        padding-top: 145%;
+    }
+  }
