--- a/style.css
+++ b/style.css
@@ -98,14 +98,18 @@ a{
 
 @media (max-width: 780px) {
     .homepage {
-        display: grid;
-        grid-template-columns: 550px;
-        grid-template-rows: repeat(4, 470px);
+        display: flex;
+        flex-direction: column;
+        flex-basis: 400px;
+        align-items: center;
+        justify-content: center;
+        padding-top: 650px;
     }
     .homepage {
         gap: 15px;
     }
+    
     #footer {
-        padding-top: 145%;
+        padding-top: 70%;
     }
   }
