--- a/style.css
+++ b/style.css
@@ -1,123 +1,7 @@
-body{
-    margin:0;
-    padding:0;
-    width:100%;
-    background-color: rgb(255, 255, 255);
+* {
+    font-family: 'Roboto Condensed', sans-serif;
 }
-.menu {
-    position: fixed;
+
+.header-container {
     background-color: black;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 200px;
-    align-items: center;
-    width:100%;
-    font-family: 'Raleway', sans-serif;
-    background-color: black;
-    color: aliceblue;
-    z-index:1000;
 }
-
-.leftmenu > a{
-    display: flex;
-    align-items: center;
-    color:aliceblue;
-    padding-left: 15px;
-    justify-content: center;
-}
-
-.logo {
-    width: 70px;
-    height: 25px;
-    display: inline;
-}
-
-.rightmenu{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-a{
-    padding: 24px;
-    text-decoration: none;
-    font-family: 'Raleway', sans-serif;
-    color: aliceblue;
-}
-
-.center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.homepage {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 600;
-    display: grid;
-    height: 100vh;
-    grid-template-columns: 600px 600px;
-    grid-template-rows: 370px 320px;
-    gap: 35px;
-    padding: 15px;
-    padding-top: 250px;
-}
-.pic1 {
-    width: 600px;
-    height: 370px;
-    float:left;
-    border-radius: 10px;
-    filter: drop-shadow(0px 0px 8px #000000);
-}
-.pic2 {
-    width: 600px;
-    float:right;
-    border-radius: 10px;
-    filter: drop-shadow(0px 0px 8px #000000);
-}
-.p1 {
-    margin-top: 0;
-    font-size: 34px;
-    text-align: justify;
-}
-.p2 {
-    margin-top: 0;
-    font-size: 32px;
-    text-align: justify;
-}
-
-#footer {
-    height:15px;
-    margin-top : 10px;
-    text-align: center;
-    font-size: 12px ;
-    font-family: 'Raleway', sans-serif;
-    border-bottom: solid 5px red;
-    }
-
-@media (max-width: 780px) {
-    .homepage {
-        display: flex;
-        flex-direction: column;
-        flex-basis: 350px;
-        align-items: center;
-        justify-content: center;
-        padding-top: 650px;
-    }
-    .homepage {
-        gap: 15px;
-    }
-    .pinthis {
-        order: -1;
-    }
-    .homepage > div {
-        flex:auto
-    }
-    .homepage > img {
-        width: 200px;
-    }
-    #footer {
-        padding-top: 70%;
-    }
-  }
